# OSWet4

./: .gitignore  CMakeLists.txt  malloc_1.cpp  malloc_2.cpp  malloc_3.cpp  malloc_4.cpp
tests_ariel/: printMemoryList.h  printMemoryList4.h  test.cpp  test4.cpp
